Update `/nodes/{hostname}/gpu/info` with yml responses
